--- a/templates/atomic/organisms/list_pagination.html
+++ b/templates/atomic/organisms/list_pagination.html
@@ -3,11 +3,26 @@
 <div class="mt-4 sm:px-6 lg:px-8">
     <span class="text-sm text-gray-700 flex gap-1 pb-5 items-center">
       {% if page_obj.has_previous %}
-      <a href="?page=1{% url_params request %}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm">
+      <a href="?page=1{% url_params request %}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm
+      dark:before:rounded-xl 
+      dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
+      dark:before:pointer-events-none
+      dark:before:-inset-px
+      dark:before:absolute
+      dark:bg-zinc-900">
         <i class="fa fa-caret-left" aria-hidden="true"></i>
         <i class="fa fa-caret-left" aria-hidden="true"></i>
       </a>
-      <a href="?page={{ page_obj.previous_page_number }}{% url_params request %}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm">
+      <a href="?page={{ page_obj.previous_page_number }}{% url_params request %}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm
+      dark:before:rounded-xl 
+      dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
+      dark:before:pointer-events-none
+      dark:before:-inset-px
+      dark:before:absolute
+      dark:bg-zinc-900
+      ">
         <i class="fa fa-caret-left" aria-hidden="true"></i>
       </a> 
       {% endif %}
@@ -19,10 +34,26 @@
       <span class="font-bold">{{ page_obj.paginator.num_pages }}</span>
 
       {% if page_obj.has_next %}
-      <a href="?page={{ page_obj.next_page_number }}{% url_params request %}"  class="h-6 w-6 bg-white flex items-center justify-center rounded-sm">
+      <a href="?page={{ page_obj.next_page_number }}{% url_params request %}"  class="h-6 w-6 bg-white flex items-center justify-center rounded-sm
+      dark:before:rounded-xl 
+      dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
+      dark:before:pointer-events-none
+      dark:before:-inset-px
+      dark:before:absolute
+      dark:bg-zinc-900
+      ">
         <i class="fa fa-caret-right" aria-hidden="true"></i>
       </a>
-      <a href="?page={{ page_obj.paginator.num_pages }}{% url_params request %}"  class="h-6 w-6 bg-white flex items-center justify-center rounded-sm">
+      <a href="?page={{ page_obj.paginator.num_pages }}{% url_params request %}"  class="h-6 w-6 bg-white flex items-center justify-center rounded-sm
+      dark:before:rounded-xl 
+      dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
+      dark:before:pointer-events-none
+      dark:before:-inset-px
+      dark:before:absolute
+      dark:bg-zinc-900
+      ">
         <i class="fa fa-caret-right" aria-hidden="true"></i>
         <i class="fa fa-caret-right" aria-hidden="true"></i>
       </a>
