fix: fix pagination team page

--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -280,7 +280,7 @@
 
 <script>
   const setInputUrl = (page, tab) =>{        
-
+    console.log(page, tab)
     let params = new URLSearchParams(document.location.search);
     var new_url = ""
 
