--- a/templates/atomic/organisms/aside.html
+++ b/templates/atomic/organisms/aside.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li class="h-[56px] flex items-center">
-                <a href="{% url 'team_list' %}">
+                <a href="{% url 'player_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
                         <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
                             {% include 'icons/player.html' %}
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li class="h-[56px] flex items-center">
-                <a href="{% url 'team_list' %}">
+                <a href="{% url 'stadium_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
                         <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
                             {% include 'icons/stadium.html' %}
