--- a/countries/templates/countries/country_detail.html
+++ b/countries/templates/countries/country_detail.html
@@ -359,7 +359,7 @@
                 scope="col"
                 class="text-sm font-medium px-6 py-4 text-left"
               >
-              <a href="?tab=players&field_player=birth{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
+              <a href="?tab=players&field_player=birthdate{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
                 Nascimento              
                    <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
@@ -400,7 +400,7 @@
                 </td>
   
                 <td class="text-sm   font-light px-6 py-4 whitespace-nowrap">
-                    <span class="hover:underline">{{ player.birth }}</span>
+                    <span class="hover:underline">{{ player.birthdate }}</span>
                 </td>
                 <td class="text-sm   font-light px-6 py-4 whitespace-nowrap">
                 <td class="text-sm   font-light px-6 py-4 whitespace-nowrap text-right">
