--- a/templates/atomic/organisms/aside.html
+++ b/templates/atomic/organisms/aside.html
@@ -1,5 +1,5 @@
 <!-- skeleton_loading.html -->
-<aside class="border-l-solid border-l-[10px] dark:bg-[#18181b]  dark:border-l-[#18181b]  bg-light white:border-l-white border-l-white h-screen fixed shadow-[1px_0px_35px_1px_#00000024] z-10 overflow-x-hidden">
+<aside class="border-l-solid border-l-[10px] dark:bg-[#18181b]  dark:border-l-[#18181b]  bg-light white:border-l-white border-l-white h-full fixed shadow-[1px_0px_35px_1px_#00000024] z-20 overflow-x-hidden transition-primary">
     <ul class="absolute z-2 top-[50px]">
         <!-- Skeleton loading list items -->
             <li class="h-[56px] flex items-center">
