--- a/templates/atomic/organisms/nav.html
+++ b/templates/atomic/organisms/nav.html
@@ -1,5 +1,5 @@
 <nav
-class="background-color flex justify-between items-center  dark:bg-[#0f0f12] fixed w-screen left-0 z-20 h-[50px] pr-4 transition ease-in-out delay-150 shadow-[7px_6px_10px_0px_#00000024]"
+class="background-color flex justify-between items-center  dark:bg-[#141414] fixed w-screen left-0 z-30 h-[50px] pr-4 transition ease-in-out delay-150 shadow-[7px_6px_10px_0px_#00000024]"
 >
 <div class="toggle-menu">
   <div class="line"></div>
@@ -15,5 +15,6 @@ class="background-color flex justify-between items-center  dark:bg-[#0f0f12] fix
   </a>
 </h1>
 
-{% include 'atomic/organisms/datalist.html' %}
+{% include 'atomic/organisms/datalist_desktop.html' %}
+{% include 'atomic/organisms/datalist_mobile.html' %}
 </nav>
