--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
   {% include 'atomic/organisms/aside.html' %}
 
   <!-- Main content -->
-  <main class="z-10 overflow-hidden absolute pt-[55px] pl-[10px] left-[70px] min-h-[100vh] overflow-auto pb-8">
+  <main class="z-10 overflow-hidden absolute min-h-[100vh]  overflow-auto pb-8 transition-primary pt-0">
 
     {% include 'atomic/organisms/breadcrumb.html' %}
 
