--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -17,7 +17,6 @@
   dark:bg-zinc-900 forced-colors:outline rounded-lg   
   dark:before:rounded-xl 
   dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-  dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
   dark:before:pointer-events-none
   dark:before:absolute
   
@@ -27,39 +26,36 @@
   </div>
 </div>
 
-<div class="flex justify-center gap-2 my-5">
+<div class="grid grid-cols-1 grid-rows-4 md:grid-cols-2 md:grid-rows-2 lg:grid-cols-4 lg:grid-rows-1 gap-2 my-5 my-2 mx-auto min-w-full sm:px-6 lg:px-8">
   <div class="highlight_card">
-    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
+    <div class="highlight_card h-full w-full justify-between bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
     dark:bg-zinc-900 forced-colors:outline rounded-lg   
     dark:before:rounded-xl 
     dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
     dark:before:pointer-events-none
     dark:before:absolute
     
+    
     ">
-      <span class="text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm lg:text-md dark:text-[#A1A1AA]">
         PAÍS:
       </span>
-      <img width="26" height="16" src="/media/images/countries/{{ related_country.slug }}{{ related_country.id }}.png" class="inline-block h-[16px]" />
-      <a href={% url "country_detail" pk=related_country.pk %} class="inline-block text-sm font-medium dark:text-white">
+      <a href={% url "country_detail" pk=related_country.pk %} class="inline-block text-xs md:text-sm lg:text-md font-medium dark:text-white">
+        <img width="26" height="16" src="/media/images/countries/{{ related_country.slug }}{{ related_country.id }}.png" class="inline-block h-[16px]" />
         {{ related_country.name | upper }} 
       </a>  
     </div>
   </div>
 
   <div class="highlight_card">
-    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
+    <div class="highlight_card h-full w-full justify-between bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
     shadow px-2 py-1
     dark:bg-zinc-900 forced-colors:outline rounded-lg   
     dark:before:rounded-xl 
     dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
     dark:before:pointer-events-none
-    dark:before:absolute
-    
-    ">
-    <span class="text-sm dark:text-[#A1A1AA]">
+    dark:before:absolute ">
+    <span class="text-xs md:text-sm lg:text-md dark:text-[#A1A1AA]">
       VALOR DO ELENCO:
       </span>
       <span class="text-green-700 font-bold text-sm">  {{ team_players_value | passToFloat}}  </span>
@@ -68,15 +64,15 @@
   </div>
 
   <div class="highlight_card">
-    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
+    <div class="highlight_card h-full w-full justify-between bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
     dark:bg-zinc-900 forced-colors:outline rounded-lg   
     dark:before:rounded-xl 
     dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
     dark:before:pointer-events-none
     dark:before:absolute
+    
     ">
-      <span class="text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm lg:text-md dark:text-[#A1A1AA]">
         VALOR DE MERCADO: 
       </span>
       <span class="text-green-700 font-bold text-sm"> {{ team.total_market_value | passToFloat }} </span>
@@ -84,15 +80,15 @@
   </div>
 
   <div class="highlight_card">
-    <div class="highlight_card h-full w-full max-w-sm justify-center bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
+    <div class="highlight_card h-full w-full justify-between bg-white flex rounded-sm gap-2 items-center shadow px-2 py-1
     dark:bg-zinc-900 forced-colors:outline rounded-lg   
     dark:before:rounded-xl 
     dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
     dark:before:pointer-events-none
     dark:before:absolute
+    
     ">
-      <span class="text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm lg:text-md dark:text-[#A1A1AA]">
         ESTÁDIO: 
       </span>
       <span class="text-green-700 font-bold text-sm"> {{ stadium.name }} </span>
@@ -101,13 +97,13 @@
 </div>
 
 <!-- Table container -->
-<div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5 ">
-  <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+<div class="sm:mx-0.5 lg:mx-0.">
+  <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
 
     <div class="table_tabs flex justify-evenly gap-1 relative z-10 w-[250px] rounded-t-md text-xs dark:text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1 shadow  bg-white dark:bg-zinc-900">
-      <div table="players" class="players_tab tab w-1/3 text-center {% if request.GET.tab == 'players' or not request.GET.tab %} font-bold {% endif %}">JOGADORES</div>
+      <div table="players" class="players_tab tab text-center {% if request.GET.tab == 'players' or not request.GET.tab %} font-bold {% endif %}">JOGADORES</div>
       <span class="inline-block mx-2">|</span>
-      <div table="trophies" class="trophies_tab tab w-1/3 text-center {% if request.GET.tab == 'trophies' %} font-bold {% endif %}">TROFÉUS</div>
+      <div table="trophies" class="trophies_tab tab text-center {% if request.GET.tab == 'trophies' %} font-bold {% endif %}">TROFÉUS</div>
     </div>
 
     <div class="team_tables overflow-hidden relative z-10 rounded-md rounded-tl-[0px]  
@@ -119,13 +115,13 @@
       dark:before:rounded-tl-xl 
     ">
       <!-- Table for displaying players data -->
-      <div class="px-3"> 
-        <table class="{% if request.GET.tab == 'players' or not request.GET.tab %}{% else %} hidden {% endif %} players_table min-w-full">
+      <div class="overflow-auto px-3"> 
+        <table class="{% if request.GET.tab == 'players' or not request.GET.tab %}{% else %} hidden {% endif %} players_table min-w-[800px] md:min-w-full">
           <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
             <tr>
               <th
                 scope="col"
-                class="text-sm px-2 py-4 text-left"
+                class="text-xs md:text-sm lg:text-md px-2 py-4 text-left"
               >
                 <a
                 href="{% url 'team_detail' pk=team.pk %}?tab=players&field_player=number{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}"
@@ -137,7 +133,7 @@
 
               <th
                 scope="col"
-                class="text-sm px-2 py-4 text-center"
+                class="text-xs md:text-sm lg:text-md px-2 py-4 text-center"
               >
                 <a
                   href="{% url 'team_detail' pk=team.pk %}?tab=players&field_player=name{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}"
@@ -148,7 +144,7 @@
               </th>
               <th
               scope="col"
-              class="text-sm px-2 py-4 text-left"s
+              class="text-xs md:text-sm lg:text-md px-2 py-4 text-left"
             >
               <a
                 href="{% url 'team_detail' pk=team.pk %}?tab=players&field_player=pos{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}"
@@ -159,7 +155,7 @@
             </th>
               <th
                 scope="col"
-                class="text-sm px-2 py-4 text-left"
+                class="text-xs md:text-sm lg:text-md px-2 py-4 text-left"
               >
                 <a href="{% url 'team_detail' pk=team.pk %}?tab=players&field_player=birthdate{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
                   Nascimento              
@@ -168,7 +164,7 @@
               </th>
               <th
                 scope="col"
-                class="text-sm px-2 py-4 text-left"
+                class="text-xs md:text-sm lg:text-md px-2 py-4 text-left"
               >
                 <a href="{% url 'team_detail' pk=team.pk %}?tab=players&field_player=country_name{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
                   País de origem 
@@ -177,7 +173,7 @@
               </th>
               <th
                 scope="col"
-                class="text-sm px-2 py-4 text-right"
+                class="text-xs md:text-sm lg:text-md px-2 py-4 text-right"
               >
                 <a href="{% url 'team_detail' pk=team.pk %}?tab=players&field_player=value_market{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
                   Valor de mercado 
@@ -193,21 +189,21 @@
                 <span>{{ player.num }}</span>
               </td>
   
-              <td class="px-2 py-4 whitespace-nowrap text-sm flex flex-col justify-left align-center">
-                <img width="52" height="52" src="{{ player.img }}" class="object-cover rounded-full w-[52px] h-[52px] m-auto block" />
-                  <a href="#" class="gap-1 text-center hover:underline">
+              <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-md flex flex-col justify-left align-center">
+                <img width="52" height="52" src="{{ player.img }}" class="object-cover rounded-full w-[38px] h-[38px] md:w-[52px] md:h-[52px] m-auto block" />
+                  <a href="#" class="block max-w-[80px] m-auto text-center hover:underline whitespace-normal">
                     {{ player.name }}
                   </a>
               </td>
 
-              <td class="px-2 py-4 whitespace-nowrap text-sm">
+              <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-md">
                 <span>{{ player.pos }}</span>
               </td>
 
-              <td class="text-sm font-light px-2 py-4 whitespace-nowrap">
+              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap">
                   <span class="hover:underline">{{ player.birthdate }}</span>
               </td>
-              <td class="text-sm font-light px-2 py-4 whitespace-nowrap">
+              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap">
                 <img src="{{ player.country_flag }}"  title="{{ player.country_name }}" class="inline-block"/>
                 <a href="{% url "country_detail" pk=player.id_country_id %}" class="hover:underline">
                   {{ player.country_name }}
@@ -224,19 +220,19 @@
       </div>
       
       <!-- Table for displaying trophies data -->
-      <div class="px-3">
-        <table class="{% if request.GET.tab != 'trophies' %} hidden {% endif %} trophies_table min-w-full">
-          <thead class="dark:text-white">
+      <div class="overflow-auto px-3">
+        <table class="{% if request.GET.tab != 'trophies' %} hidden {% endif %} trophies_table min-w-[800px] md:min-w-full">
+          <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
             <tr>
               <!-- Table headers -->
-              <th scope="col" class="px-6 py-4 text-sm font-medium text-left">#</th>
-              <th scope="col" class="px-6 py-4 text-sm font-medium text-left">
+              <th scope="col" class="px-6 py-4 text-xs md:text-sm lg:text-md font-medium text-left">#</th>
+              <th scope="col" class="px-6 py-4 text-xs md:text-sm lg:text-md font-medium text-left">
                 <!-- Column header for team name -->
                 <a href="?tab=trophies&field_trophy=name{% if request.GET.order_trophy == 'asc' %}&order_trophy=desc{% else %}&order_trophy=asc{% endif %}">
                   Título <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
               </th>
-              <th scope="col" class="px-6 py-4 text-sm font-medium text-left">
+              <th scope="col" class="px-6 py-4 text-xs md:text-sm lg:text-md font-medium text-left">
                 <!-- Column header for average market value -->
                 <a href="?tab=trophies&field_trophy=season{% if request.GET.order_trophy == 'asc' %}&order_trophy=desc{% else %}&order_trophy=asc{% endif %}">
                   Temporada <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -250,14 +246,14 @@
               {% for trophy in trophies %}
                 <tr class="bg-white dark:bg-zinc-900 border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
                   <!-- Team data -->
-                  <td class="px-6 py-4 whitespace-nowrap text-sm">
+                  <td class="px-6 py-4 text-xs md:text-sm lg:text-md font-light whitespace-nowrap">
                     <img width="40" src="{{ trophy.id_trophy.img }}" class="min-w-[40px]" />
                   </td>
-                  <td class="px-6 py-4 text-sm font-light whitespace-nowrap">
+                  <td class="px-6 py-4 text-xs md:text-sm lg:text-md font-light whitespace-nowrap">
                     <!-- Team name -->
                     <a href="#" class="hover:underline">{{ trophy.id_trophy.name }}</a>
                   </td>
-                  <td class="px-6 py-4 text-sm font-light whitespace-nowrap">
+                  <td class="px-6 py-4 text-xs md:text-sm lg:text-md font-light whitespace-nowrap">
                     <!-- Average market value -->
                     <span>{{ trophy.season }}</span>
                   </td>
@@ -280,7 +276,6 @@
 
 <script>
   const setInputUrl = (page, tab) =>{        
-    console.log(page, tab)
     let params = new URLSearchParams(document.location.search);
     var new_url = ""
 
@@ -306,7 +301,7 @@
       e.target.classList.add("font-bold");
       tab_table = e.currentTarget.getAttribute("table")
 
-      document.querySelectorAll(".team_tables table.min-w-full").forEach(table=>{
+      document.querySelectorAll(".team_tables table").forEach(table=>{
         if(table.className.includes(tab_table)){
           table.classList.remove("hidden")
         }else{
